data/derived/sp14/progs/unify/prog3125.ml.out
Characters 45-49:
  wwhile (if b=(f b) then true else false,b);;
                          ^^^^
Error: This expression has type bool but an expression was expected of type
         ('a -> 'a * bool) * 'a
